--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="header-logo">
-                <div>logo</div>
+                <div><img src="./img/logo.svg" alt=""></div>
             </div>
             <div class="header-links"><a href="">link</a>
                 <a href="">link</a>
