--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <div class="header-logo">
                 <div><img src="./img/logo.svg" alt=""></div>
             </div>
-            <div class="header-links"><a href="">link</a>
-                <a href="">link</a>
-                <a href="">link</a>
-                <a href="">link</a>
+            <div class="header-links">
+                <a href="">Scarica</a>
+                <a href="">Perché Discord</a>
+                <a href="">Nitro</a>
+                <a href="">Sicurezza</a>
+                <a href="">Assistenza</a>
             </div>
-            <div class="header-login"><a href="">login</a></div>
+            <div class="header-login"><a href="" class="login">Accedi</a></div>
         </div>
     </header>
     <!-- /header -->
