--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Structure</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <header>
         <div class="header-container">
             <div class="header-logo">
-                <div><img src="./img/logo.svg" alt=""></div>
+                <div><img src="./img/logo.svg" alt="Discord Logo"></div>
             </div>
             <div class="header-links">
                 <a href="">Scarica</a>
@@ -29,7 +30,13 @@
 
     <!-- hero -->
     <section class="hero">
-        <div class="hero-container"></div>
+        <div class="hero-container">
+            <h1>Il tuo posto per parlare</h1>
+            <p id="intro">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,<br> o semplicemente un piccolo gruppo di amici che vuole passare tempo assieme,<br> Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <a href="" class="download"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
+            <a href="" class="open">Apri Discord nel tuo browser</a>
+            
+        </div>
     </section>
     <!-- /hero -->
 
