--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Structure</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -32,10 +34,12 @@
     <section class="hero">
         <div class="hero-container">
             <h1>Il tuo posto per parlare</h1>
-            <p id="intro">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,<br> o semplicemente un piccolo gruppo di amici che vuole passare tempo assieme,<br> Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <p id="intro">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,<br> o
+                semplicemente un piccolo gruppo di amici che vuole passare tempo assieme,<br> Discord rende più facile
+                chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             <a href="" class="download"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
             <a href="" class="open">Apri Discord nel tuo browser</a>
-            
+
         </div>
     </section>
     <!-- /hero -->
@@ -43,8 +47,12 @@
     <!-- section 1 -->
     <section class="section white">
         <div class="section-container">
-            <div class="img-column"></div>
-            <div class="text-column"></div>
+            <div class="img-column"><img src="/img/item1.svg" alt="text-channel image"></div>
+            <div class="text-column">
+                <h2>Un luogo a invito<br>con tutto lo<br>spazio<br>necessario per<br>parlare</h2>
+                <p>I server Discord sono organizzati in canali<br>tematici in cui puoi collaborare, condividere o
+                    <br>semplicemente parlare della tua giornata<br>senza intasare una chat di gruppo.</p>
+            </div>
         </div>
     </section>
     <!-- /section 1 -->
@@ -52,8 +60,12 @@
     <!-- section 2 -->
     <section class="section grey">
         <div class="reverse-container">
-            <div class="img-column"></div>
-            <div class="text-column"></div>
+            <div class="img-column"><img src="./img/item2.svg" alt="voice-channel image"></div>
+            <div class="text-column">
+                <h2>Dove trovarsi è<br>facile</h2>
+                <p>Mettiti comodo in un canale vocale quando<br>haitempo. Gli amici nel tuo server possono<br>vedere che
+                    sei lì e unirsi istantaneamente<br>senza dover chiamare.</p>
+            </div>
         </div>
     </section>
     <!-- /section 2 -->
@@ -61,15 +73,32 @@
     <!-- section 3 -->
     <section class="section white">
         <div class="section-container">
-            <div class="img-column"></div>
-            <div class="text-column"></div>
+            <div class="img-column"><img src="./img/item3.svg" alt="discord profile in a server example"></div>
+            <div class="text-column">
+                <h2>Da pochi a un<br>fandom</h2>
+                <p>Dai inizio a una community di qualsiasi<br>dimensione con strumenti di moderazione e<br>accesso ai
+                    membri personalizzabile.<br>Concedi ai membri poteri speciali, crea<br>canali privati, e molto
+                    altro.</p>
+            </div>
         </div>
     </section>
     <!-- /section 3 -->
 
     <!-- summary -->
     <section class="summary grey">
-        <div class="summary-container"></div>
+        <div class="summary-container">
+            <h2>Tecnologia affidabile per tenersi in contatto</h2>
+            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+                video, guarda<br>gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+                condivisione schermo.</p>
+            <img src="./img/item4-big.svg" alt="Discord webcam feature example">
+            <div class="prefooter-container">
+                <div id="stars-container">
+                    <h3>Pronto a iniziare la tua avventura?</h3>
+                </div>
+            </div>
+            <a href="" class="prefooter-download"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
+        </div>
     </section>
     <!-- /summary -->
 
