--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <div class="text-column">
                 <h2>Un luogo a invito<br>con tutto lo<br>spazio<br>necessario per<br>parlare</h2>
                 <p>I server Discord sono organizzati in canali<br>tematici in cui puoi collaborare, condividere o
-                    <br>semplicemente parlare della tua giornata<br>senza intasare una chat di gruppo.</p>
+                    <br>semplicemente parlare della tua giornata<br>senza intasare una chat di gruppo.
+                </p>
             </div>
         </div>
     </section>
@@ -105,18 +106,69 @@
     <!-- footer -->
     <section class="footer-nav">
         <div class="footer-nav-container">
-            <div class="col-big"></div>
-            <div class="col-small"></div>
-            <div class="col-small"></div>
-            <div class="col-small"></div>
-            <div class="col-small"></div>
+            <div class="col-big">
+                <h3 class="blue">Il tuo posto per<br>parlare</h3>
+                <div class="lang"><img id="ita" src="./img/ita.png" alt="bandiera italiana"><a href="">Italiano <i
+                            class="fa-solid fa-chevron-down"></i></a></div>
+                <div class="social">
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="col-small">
+                <ul>
+                    <li class="blue"><strong>Prodotto</strong></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
+            </div>
+            <div class="col-small">
+                <ul>
+                    <li class="blue"><strong>Compagnia</strong></li>
+                    <li><a href="">Chi siamo</a></li>
+                    <li><a href="">Lavora con noi</a></li>
+                    <li><a href="">Marchio</a></li>
+                    <li><a href="">Redazione</a></li>
+                    <li><a href="">Negozio</a></li>
+                </ul>
+            </div>
+            <div class="col-small">
+                <ul>
+                    <li class="blue"><strong>Risorse</strong></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
+            </div>
+            <div class="col-small">
+                <ul>
+                    <li class="blue"><a href="">Norme</a></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
+            </div>
         </div>
     </section>
-    <hr>
     <footer>
+
         <div class="footer-container">
-            <div class="footer-logo">Logo</div>
-            <div class="footer-button"><a href="">Button</a></div>
+            <div class="footer-logo"><img src="./img/logo.svg" alt=""></div>
+            <div class="footer-button"><a href="">Registrati</a></div>
         </div>
     </footer>
     <!-- /footer -->
